generate colab notebooks

--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "53acbda1",
+   "id": "fabaacf3",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd60193e",
+   "id": "9c43b45f",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5e8b612",
+   "id": "b8ec517f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a2a6627",
+   "id": "9cda5d44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef153b85",
+   "id": "5cd6ad06",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4196833",
+   "id": "3b68f1ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04af7bd6",
+   "id": "2ccb4a3e",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -100,16 +100,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72343921",
+   "id": "bc9a754a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_designer_client = DataDesigner()"
+    "data_designer = DataDesigner()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "31e7f7b4",
+   "id": "4a1335a7",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18c66cde",
+   "id": "6ae7a51e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b7593ae",
+   "id": "891d5040",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e6abcb9",
+   "id": "d3a95b64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94624f9d",
+   "id": "7d67b2b1",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "974102ec",
+   "id": "78fbeae4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ef74249",
+   "id": "69463e64",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf4649e",
+   "id": "a5da9004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32d6054b",
+   "id": "63196378",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcffc816",
+   "id": "36fe581f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7605cda9",
+   "id": "998e907e",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -440,17 +440,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c99dab1",
+   "id": "d2ec151e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "preview = data_designer_client.preview(config_builder, num_records=2)"
+    "preview = data_designer.preview(config_builder, num_records=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f870c338",
+   "id": "231e4b2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e41c3e55",
+   "id": "4e9b1ecd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4744d3bf",
+   "id": "47a8e374",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5402169e",
+   "id": "1cb581f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bafe4cb",
+   "id": "aff26604",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -507,22 +507,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26a59fac",
+   "id": "2804c0bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "job_results = data_designer_client.create(config_builder, num_records=10)"
+    "results = data_designer.create(config_builder, num_records=10, dataset_name=\"tutorial-2\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c89f583e",
+   "id": "e44d4940",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the generated dataset as a pandas DataFrame.\n",
-    "dataset = job_results.load_dataset()\n",
+    "dataset = results.load_dataset()\n",
     "\n",
     "dataset.head()"
    ]
@@ -530,19 +530,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26da405a",
+   "id": "1da63b8c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the analysis results into memory.\n",
-    "analysis = job_results.load_analysis()\n",
+    "analysis = results.load_analysis()\n",
     "\n",
     "analysis.to_report()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "03868d2a",
+   "id": "ec74a797",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
