--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6bf25ee2",
+   "id": "c0a5ad9c",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa76e5cd",
+   "id": "5f390e88",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d42978e",
+   "id": "3b5d2be3",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c016a522",
+   "id": "d7975769",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e00e775",
+   "id": "75793ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bb848d5",
+   "id": "09868c88",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aa2bfb8",
+   "id": "0c505114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5dac189",
+   "id": "831df7e9",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0622a4a4",
+   "id": "433cdf1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa146e50",
+   "id": "eddf1262",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8f66a44",
+   "id": "7001a15d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "332729b4",
+   "id": "73bb672c",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f879937f",
+   "id": "231e84e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac6ec0e7",
+   "id": "dd756993",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "065921f2",
+   "id": "0e218552",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78b301dc",
+   "id": "cf33a7ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e273ca99",
+   "id": "f7b9d525",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a91cc80d",
+   "id": "7474c081",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c45288b",
+   "id": "8c56d461",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1fe8e02",
+   "id": "ba32ed33",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6ce7129",
+   "id": "6d93b821",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f50979bc",
+   "id": "516f5380",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2d22d21",
+   "id": "0db8df1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeab6ce8",
+   "id": "0064e2ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9cd2aae",
+   "id": "c2f39f30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f49c639",
+   "id": "e1460b2d",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35273897",
+   "id": "22786db9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f23eda2",
+   "id": "a249f2ef",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38402972",
+   "id": "86fcc082",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce76408f",
+   "id": "d404d91c",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -470,17 +470,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a316fe3",
+   "id": "6da5b84b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = data_designer.create(config_builder, num_records=10)"
+    "results = data_designer.create(config_builder, num_records=10, dataset_name=\"tutorial-4\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fc390c7",
+   "id": "0a9f69a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ccc01d3",
+   "id": "d980ba69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bd96d19",
+   "id": "bb4f8c1c",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
