--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56daa304",
+   "id": "2e6331ad",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8734a74a",
+   "id": "af3aad47",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45510d11",
+   "id": "4c39e2a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bad4940",
+   "id": "d8652e5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0543d90e",
+   "id": "c51e6323",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90185344",
+   "id": "2de6b279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6fcf82b",
+   "id": "6a484a8d",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8760c1ef",
+   "id": "7554bd1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da9d9f06",
+   "id": "dc1d9f84",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03760d56",
+   "id": "76d22674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a968637c",
+   "id": "187da050",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5768870",
+   "id": "977497d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d12c1559",
+   "id": "92c51ea0",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c47fbe6",
+   "id": "68d7a4e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b47862c5",
+   "id": "314c4719",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ff2257f",
+   "id": "1bcad060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a26f889e",
+   "id": "aab7414d",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e603d4cc",
+   "id": "f191f5bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf5070af",
+   "id": "5d893b3d",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "775c6fa8",
+   "id": "2abadac9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25796666",
+   "id": "2c9cb423",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba90ee16",
+   "id": "71e3a022",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db9d6f8a",
+   "id": "28f7913d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb555bd5",
+   "id": "6621c80f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b35ee52b",
+   "id": "2b451ded",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d15fb8d",
+   "id": "0f7cb6cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fefec9f",
+   "id": "721b3c7d",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -475,17 +475,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "395faa2c",
+   "id": "1ad777d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = data_designer.create(config_builder, num_records=10)"
+    "results = data_designer.create(config_builder, num_records=10, dataset_name=\"tutorial-1\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65dcd625",
+   "id": "df089509",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aef103b",
+   "id": "e37fa65b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09ec21ba",
+   "id": "84d1802b",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
