--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b90f012",
+   "id": "b126d755",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f40e01b1",
+   "id": "94c8f4da",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ea09601",
+   "id": "ebf683a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1c09194",
+   "id": "4c49f3ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "845122ac",
+   "id": "fe81f478",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "828f2aa1",
+   "id": "701e74f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +75,12 @@
     "    DataDesigner,\n",
     "    DataDesignerConfigBuilder,\n",
     "    ModelConfig,\n",
-    "    SeedConfig,\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e47c97c1",
+   "id": "381d35d6",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -94,16 +93,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33d18947",
+   "id": "50ee9b75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_designer_client = DataDesigner()"
+    "data_designer = DataDesigner()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "469646e0",
+   "id": "9b121890",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -120,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2997a0a",
+   "id": "c4c8ff05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820e1c4d",
+   "id": "9397b044",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -165,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70a499d6",
+   "id": "fb47fe2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5a2a4e6",
+   "id": "3b49e4b6",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -199,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "395e9e66",
+   "id": "8a41c518",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,17 +206,17 @@
     "import urllib.request\n",
     "\n",
     "url = \"https://raw.githubusercontent.com/NVIDIA/GenerativeAIExamples/refs/heads/main/nemo/NeMo-Data-Designer/data/gretelai_symptom_to_diagnosis.csv\"\n",
-    "local_filename, headers = urllib.request.urlretrieve(url, \"gretelai_symptom_to_diagnosis.csv\")\n",
+    "local_filename, _ = urllib.request.urlretrieve(url, \"gretelai_symptom_to_diagnosis.csv\")\n",
     "\n",
-    "seed_dataset = SeedConfig(dataset=local_filename)\n",
+    "# Seed datasets are passed as reference objects to the config builder.\n",
+    "seed_dataset_reference = data_designer.make_seed_reference_from_file(local_filename)\n",
     "\n",
-    "# Pass the reference to the config builder for use during generation.\n",
-    "config_builder.with_seed_dataset(seed_dataset)"
+    "config_builder.with_seed_dataset(seed_dataset_reference)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b6771c7f",
+   "id": "136e3e86",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
@@ -234,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37ea9449",
+   "id": "afa64628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22b85f9e",
+   "id": "ba709fc1",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -341,17 +340,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c6a551e",
+   "id": "43634cef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "preview = data_designer_client.preview(config_builder, num_records=2)"
+    "preview = data_designer.preview(config_builder, num_records=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8acc5de5",
+   "id": "ee95a73b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f964b38",
+   "id": "c1ad69b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb1c2610",
+   "id": "2998f51e",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -385,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e31b96e6",
+   "id": "78b26418",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4136a65d",
+   "id": "b87a61fc",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -408,22 +407,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e0d765",
+   "id": "30c5565c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "job_results = data_designer_client.create(config_builder, num_records=10)"
+    "results = data_designer.create(config_builder, num_records=10, dataset_name=\"tutorial-3\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f89e69f",
+   "id": "5b384d9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the generated dataset as a pandas DataFrame.\n",
-    "dataset = job_results.load_dataset()\n",
+    "dataset = results.load_dataset()\n",
     "\n",
     "dataset.head()"
    ]
@@ -431,19 +430,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "214507eb",
+   "id": "fa60ec0f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the analysis results into memory.\n",
-    "analysis = job_results.load_analysis()\n",
+    "analysis = results.load_analysis()\n",
     "\n",
     "analysis.to_report()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b96daf69",
+   "id": "b7c06123",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
