Fix stray validate calls in notebooks

--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "32827bda",
+   "id": "adb0c3cd",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe6b81e",
+   "id": "73d42bda",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b007eed",
+   "id": "c6675487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58dfdb07",
+   "id": "b98ebeee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03d07dff",
+   "id": "6e2355bb",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "749a1536",
+   "id": "95bf5ae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c31d723",
+   "id": "ee906a92",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "826f2421",
+   "id": "15b35cb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6bfc01a",
+   "id": "999ce38a",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11aa0146",
+   "id": "f5ab65d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c10b93a6",
+   "id": "912d7954",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02ae97ca",
+   "id": "0ba83688",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4c780c8",
+   "id": "ee2de21d",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "685417ab",
+   "id": "3009cfa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bae388c",
+   "id": "c42c890f",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6122711b",
+   "id": "16251687",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12d8c063",
+   "id": "ff41c919",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4c21fa0",
+   "id": "78ec15fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,12 +335,12 @@
     "    )\n",
     ")\n",
     "\n",
-    "config_builder.validate()"
+    "data_designer.validate(config_builder)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "be6bd3c8",
+   "id": "8ac2131e",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99e953d8",
+   "id": "d8232495",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,12 +386,12 @@
     "    )\n",
     ")\n",
     "\n",
-    "config_builder.validate()"
+    "data_designer.validate(config_builder)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ec30007b",
+   "id": "9105ddf2",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac1f25b",
+   "id": "a6b02b74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67d8dff4",
+   "id": "74a4a386",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f78e4d9f",
+   "id": "b1be4d95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee838ed6",
+   "id": "c2871df4",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bea0fca",
+   "id": "b2beb476",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da9875d4",
+   "id": "765fb038",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c7f20b4",
+   "id": "f4fc625e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f5fdaa8",
+   "id": "58989731",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c2d935f",
+   "id": "80351a24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a80515b7",
+   "id": "cc79ae74",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
