--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ba3eb53c",
+   "id": "166f4a41",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71e3de28",
+   "id": "00a139eb",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f12bda54",
+   "id": "a60a4a4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8e1f477",
+   "id": "14fc001f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efc5ac26",
+   "id": "22c4fe6b",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ffd67ca",
+   "id": "b2f8e13d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "782aaacd",
+   "id": "e644b2a8",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b092ccc",
+   "id": "74b146e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf4e19e2",
+   "id": "7471f914",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff05156e",
+   "id": "ea1fcee5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfbac905",
+   "id": "53855c58",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2c7a5d7",
+   "id": "74064875",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fb54697",
+   "id": "808534e9",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ea9bb0f",
+   "id": "26d84a29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "987fbf33",
+   "id": "624111a6",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9960d332",
+   "id": "c63fbc58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81f8d04a",
+   "id": "60832414",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9583bf7",
+   "id": "0964aff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,12 +418,12 @@
     "    )\n",
     ")\n",
     "\n",
-    "config_builder.validate()"
+    "data_designer.validate(config_builder)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c79829f3",
+   "id": "a818e85f",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cceb2346",
+   "id": "4af25c1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c35a66e",
+   "id": "2594a896",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5cd23a7",
+   "id": "bfffec10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2486fc8b",
+   "id": "54ce7f5d",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef90239f",
+   "id": "841f74c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9cbd2f6",
+   "id": "14573ebb",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0dcf922",
+   "id": "49b43121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aac62046",
+   "id": "d74648e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33875a50",
+   "id": "c811b234",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d532955",
+   "id": "56509580",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
