update dep groups; use in makefile

--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ca6a7da9",
+   "id": "c342c942",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a00ef2e9",
+   "id": "24deaa98",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2deb2e6e",
+   "id": "cab8c245",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,18 +36,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f41a8d77",
+   "id": "d852744d",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install -U data-designer pillow>=12.0.0"
+    "!pip install -U data-designer pillow>=12.0.0,<13 datasets>=4.0.0,<5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26f18b53",
+   "id": "bd7d1312",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb16771c",
+   "id": "bf1e027e",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135731b0",
+   "id": "c663eef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ae79a0",
+   "id": "1b21aac4",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82500b3e",
+   "id": "8bb3d05a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48b48825",
+   "id": "6a2b0030",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe18dfb1",
+   "id": "c9361132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e312574a",
+   "id": "5e888fc9",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0be81e9f",
+   "id": "ad040714",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73f11b9e",
+   "id": "51db055f",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25abc552",
+   "id": "9598ffe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faeae090",
+   "id": "86e09327",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b99e97f6",
+   "id": "b9c19106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92a7c997",
+   "id": "ea403af9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33e41250",
+   "id": "862c664c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a93b2985",
+   "id": "1354d417",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31b32222",
+   "id": "c74047f4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24e4c396",
+   "id": "7596dcfc",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0129193",
+   "id": "3865e40f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7295c8aa",
+   "id": "0ce1193a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b72b7eb9",
+   "id": "887f9058",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "add2987a",
+   "id": "5eb6679e",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7237756b",
+   "id": "fff898a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "869ac325",
+   "id": "1d27e7cc",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "688d91c1",
+   "id": "cd74febe",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbb117f4",
+   "id": "7e6fd7ee",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "765d8f42",
+   "id": "d7cb22cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00eab0c0",
+   "id": "7d61a507",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3c33d9b",
+   "id": "44556709",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a497ec1f",
+   "id": "4925b135",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
