--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c342c942",
+   "id": "f9fbb99f",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24deaa98",
+   "id": "74fae1bc",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cab8c245",
+   "id": "d49f8681",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,18 +36,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d852744d",
+   "id": "82914e68",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install -U data-designer pillow>=12.0.0,<13 datasets>=4.0.0,<5"
+    "!pip install -U data-designer \"pillow>=12.0.0,<13\" \"datasets>=4.0.0,<5\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd7d1312",
+   "id": "f737043f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf1e027e",
+   "id": "126d2d70",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c663eef5",
+   "id": "8133d225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b21aac4",
+   "id": "6e44d2f3",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bb3d05a",
+   "id": "d79edba2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a2b0030",
+   "id": "a09d8ac2",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9361132",
+   "id": "fa1eadd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e888fc9",
+   "id": "9a8b0155",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad040714",
+   "id": "ce4e11fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51db055f",
+   "id": "f50c5100",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9598ffe4",
+   "id": "54e9b8e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86e09327",
+   "id": "667ec175",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c19106",
+   "id": "d17e91ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea403af9",
+   "id": "446cac84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "862c664c",
+   "id": "3d8f4839",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1354d417",
+   "id": "37e48d84",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c74047f4",
+   "id": "ed3ef62a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7596dcfc",
+   "id": "111b3731",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3865e40f",
+   "id": "6ec2fb00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ce1193a",
+   "id": "c23cc669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "887f9058",
+   "id": "408c2234",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eb6679e",
+   "id": "ab4b1222",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff898a9",
+   "id": "1e4eb0b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d27e7cc",
+   "id": "c37e4c54",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd74febe",
+   "id": "6ab25b38",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e6fd7ee",
+   "id": "0575d43d",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7cb22cb",
+   "id": "8a9a78f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d61a507",
+   "id": "d007fbf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44556709",
+   "id": "8e8c0ab4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4925b135",
+   "id": "51ea6611",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
